--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <!-- to do input and submit form-->
     <form>
-        <input type="text" class="todo-input">
-        <button type="submit" class="todo-button">
+        <input type="text" class="todo_input">
+        <button type="submit" class="todo_button">
             <i class="fas fa-plus-square"></i>
         </button>
     </form>
@@ -41,7 +41,7 @@
 
     <!-- to do container -->
     <div class="todo-container">
-        <ul class="list-ul">
+        <ul class="list_ul">
             
         </ul>
     </div>
