--- a/index.html
+++ b/index.html
@@ -36,7 +36,18 @@
         <button type="submit" class="todo_button">
             <i class="fas fa-plus-square"></i>
         </button>
+
+        <!-- filter select option -->
+        <div class="select">
+            <select name="todos" class="filter_list">
+                <option value="all">all</option>
+                <option value="completed">completed</option>
+                <option value="uncompleted">uncompleted</option>
+            </select>
+        </div>
     </form>
+
+    
 
 
     <!-- to do container -->
